configurações de get, create e login de usuários no swagger
